# AUCG

./: README.md
fractal/: CMakeLists.txt  DrawContext.cpp  DrawContext.h  main.cpp  utils.h
fractal/shaders/: simple.fragmentshader
